# Q-KUKEB

./: .gitignore  README.md  docker-compose.yml
execution-engine/: Cargo.toml
execution-engine/crates/gateway/: Cargo.toml
execution-engine/crates/gateway/src/: fill.rs  lib.rs  portfolio.rs  service.rs  state.rs
execution-engine/crates/gateway/tests/: integration.rs
execution-engine/crates/proto/: Cargo.toml  build.rs
execution-engine/crates/proto/src/: lib.rs
execution-engine/crates/risk/: Cargo.toml
execution-engine/crates/risk/src/: decimal.rs  garch.rs  interceptor.rs  lib.rs
execution-engine/crates/transport/: Cargo.toml
execution-engine/crates/transport/src/: frames.rs  lib.rs  publisher.rs
intelligence-swarm/: pyproject.toml
intelligence-swarm/swarm/: __init__.py  default_config.py
intelligence-swarm/swarm/agents/: __init__.py
intelligence-swarm/swarm/agents/analysts/: __init__.py  fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
intelligence-swarm/swarm/agents/managers/: portfolio_manager.py  qkukeb_executor.py  research_manager.py
intelligence-swarm/swarm/agents/researchers/: __init__.py
intelligence-swarm/swarm/agents/risk_mgmt/: __init__.py
intelligence-swarm/swarm/agents/schemas/: __init__.py
intelligence-swarm/swarm/agents/trader/: trader.py
intelligence-swarm/swarm/agents/utils/: agent_utils.py  core_stock_tools.py  fundamental_data_tools.py  memory.py  news_data_tools.py  technical_indicators_tools.py
intelligence-swarm/swarm/dag/: __init__.py
intelligence-swarm/swarm/dataflows/: __init__.py  config.py
intelligence-swarm/swarm/graph/: checkpointer.py  conditional_logic.py  propagation.py  setup.py  signal_processing.py  trading_graph.py
intelligence-swarm/swarm/llm_clients/: __init__.py
intelligence-swarm/swarm/proto/: __init__.py
intelligence-swarm/swarm/proto/tradecommand/: v1.py
intelligence-swarm/swarm/transport/: grpc_bridge.py
proto/: trade_command.proto
