[workspace]
resolver = "2"
members = [
    "crates/risk",
    "crates/gateway",
    "crates/transport",
    "crates/proto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
rust-version = "1.75.0"

[workspace.dependencies]
# gRPC / protobuf
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tonic-build = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# ZeroMQ
zeromq = "0.3"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency
dashmap = "5"
async-stream = "0.3"

# Internal crate aliases
risk-engine = { path = "crates/risk" }
gateway = { path = "crates/gateway" }
transport = { path = "crates/transport" }
proto-types = { path = "crates/proto" }
