[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "qkukeb-gateway"
path = "src/bin/gateway.rs"

[dependencies]
proto-types = { workspace = true }
risk-engine = { workspace = true }
transport = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
async-stream = "0.3"
