[package]
name = "risk-engine"
version.workspace = true
edition.workspace = true

[dependencies]
proto-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
