[package]
name = "transport"
version.workspace = true
edition.workspace = true

[dependencies]
proto-types = { workspace = true }
risk-engine = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
zeromq = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
